{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 71,
  "lineage": "36961ddc-023f-2545-21c6-f6a9b699ae77",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Host1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0750a20e9959e44ff",
            "arn": "arn:aws:ec2:ap-southeast-1:033746436249:instance/i-0507fbe0beb3972ab",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0507fbe0beb3972ab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b30f915984b12913",
            "private_dns": "ip-10-0-4-229.ap-southeast-1.compute.internal",
            "private_ip": "10.0.4.229",
            "public_dns": "ec2-52-77-229-129.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.77.229.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ecb554cf6339d16a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e644050868b39b70",
            "tags": {
              "Name": "apache"
            },
            "tags_all": {
              "Name": "apache"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066f883d719d0fa6e"
            ]
          },
          "dependencies": [
            "aws_security_group.allow",
            "aws_subnet.subnet-2",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Host2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0750a20e9959e44ff",
            "arn": "arn:aws:ec2:ap-southeast-1:033746436249:instance/i-0acb15c7b7f917b3e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0acb15c7b7f917b3e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a48dc0d93ef7b13f",
            "private_dns": "ip-10-0-2-209.ap-southeast-1.compute.internal",
            "private_ip": "10.0.2.209",
            "public_dns": "ec2-13-212-36-206.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.212.36.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d75f3ad3d5792dcf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01c66adc4b42f8afe",
            "tags": {
              "Name": "nginx"
            },
            "tags_all": {
              "Name": "nginx"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066f883d719d0fa6e"
            ]
          },
          "dependencies": [
            "aws_security_group.allow",
            "aws_subnet.subnet-1",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:033746436249:internet-gateway/igw-0c7ab8fbfd9da9860",
            "id": "igw-0c7ab8fbfd9da9860",
            "owner_id": "033746436249",
            "tags": {
              "Name": "Terraform"
            },
            "tags_all": {
              "Name": "Terraform"
            },
            "vpc_id": "vpc-0d67b1f9c45f67aa3"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:033746436249:loadbalancer/app/Terraform/e39170bd84b7f571",
            "arn_suffix": "app/Terraform/e39170bd84b7f571",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Terraform-1803958540.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:033746436249:loadbalancer/app/Terraform/e39170bd84b7f571",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Terraform",
            "security_groups": [
              "sg-066f883d719d0fa6e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01c66adc4b42f8afe"
              },
              {
                "subnet_id": "subnet-0d5a3b7ef5de9b7f0"
              },
              {
                "subnet_id": "subnet-0e644050868b39b70"
              }
            ],
            "subnets": [
              "subnet-01c66adc4b42f8afe",
              "subnet-0d5a3b7ef5de9b7f0",
              "subnet-0e644050868b39b70"
            ],
            "tags": {
              "Name": "Terraform"
            },
            "tags_all": {
              "Name": "Terraform"
            },
            "vpc_id": "vpc-0d67b1f9c45f67aa3",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.allow",
            "data.aws_subnets.ids"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "LG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:033746436249:listener/app/Terraform/e39170bd84b7f571/a61c1290547ac4a2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:033746436249:targetgroup/TG/5d6cddec85fc3059",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:033746436249:listener/app/Terraform/e39170bd84b7f571/a61c1290547ac4a2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:033746436249:loadbalancer/app/Terraform/e39170bd84b7f571",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test",
            "aws_lb_target_group.TG",
            "aws_security_group.allow",
            "data.aws_subnets.ids"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:033746436249:targetgroup/TG/5d6cddec85fc3059",
            "arn_suffix": "targetgroup/TG/5d6cddec85fc3059",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:033746436249:targetgroup/TG/5d6cddec85fc3059",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d67b1f9c45f67aa3"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "apache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:033746436249:targetgroup/TG/5d6cddec85fc3059-20220530120024632500000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:033746436249:targetgroup/TG/5d6cddec85fc3059",
            "target_id": "i-0507fbe0beb3972ab"
          },
          "dependencies": [
            "aws_instance.Host1",
            "aws_lb_target_group.TG",
            "aws_security_group.allow",
            "aws_subnet.subnet-2",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:033746436249:targetgroup/TG/5d6cddec85fc3059-20220530120044465600000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:033746436249:targetgroup/TG/5d6cddec85fc3059",
            "target_id": "i-0acb15c7b7f917b3e"
          },
          "dependencies": [
            "aws_instance.Host2",
            "aws_lb_target_group.TG",
            "aws_security_group.allow",
            "aws_subnet.subnet-1",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:033746436249:route-table/rtb-0a11032b256fea0ec",
            "id": "rtb-0a11032b256fea0ec",
            "owner_id": "033746436249",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c7ab8fbfd9da9860",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c7ab8fbfd9da9860",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform"
            },
            "tags_all": {
              "Name": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d67b1f9c45f67aa3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a2f508244120a24",
            "route_table_id": "rtb-0a11032b256fea0ec",
            "subnet_id": "subnet-0e644050868b39b70"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.terraform",
            "aws_subnet.subnet-2",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03af40ccda01f0313",
            "route_table_id": "rtb-0a11032b256fea0ec",
            "subnet_id": "subnet-01c66adc4b42f8afe"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.terraform",
            "aws_subnet.subnet-1",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07774eb9d6e1e93f6",
            "route_table_id": "rtb-0a11032b256fea0ec",
            "subnet_id": "subnet-0d5a3b7ef5de9b7f0"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.terraform",
            "aws_subnet.subnet-3",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:033746436249:security-group/sg-066f883d719d0fa6e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066f883d719d0fa6e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow",
            "name_prefix": "",
            "owner_id": "033746436249",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow"
            },
            "tags_all": {
              "Name": "allow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d67b1f9c45f67aa3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:033746436249:subnet/subnet-01c66adc4b42f8afe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c66adc4b42f8afe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "033746436249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tarreform"
            },
            "tags_all": {
              "Name": "Tarreform"
            },
            "vpc_id": "vpc-0d67b1f9c45f67aa3"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:033746436249:subnet/subnet-0e644050868b39b70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e644050868b39b70",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "033746436249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tarreform"
            },
            "tags_all": {
              "Name": "Tarreform"
            },
            "vpc_id": "vpc-0d67b1f9c45f67aa3"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:033746436249:subnet/subnet-0d5a3b7ef5de9b7f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5a3b7ef5de9b7f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "033746436249",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tarreform"
            },
            "tags_all": {
              "Name": "Tarreform"
            },
            "vpc_id": "vpc-0d67b1f9c45f67aa3"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:033746436249:vpc/vpc-0d67b1f9c45f67aa3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c6ac9ba91f7fdcee",
            "default_route_table_id": "rtb-038e2f7e88c5ec4fe",
            "default_security_group_id": "sg-0917f28228c3ed9d9",
            "dhcp_options_id": "dopt-0aebd4488bf40426d",
            "enable_classiclink": true,
            "enable_classiclink_dns_support": true,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d67b1f9c45f67aa3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-038e2f7e88c5ec4fe",
            "owner_id": "033746436249",
            "tags": {
              "Name": "teraform"
            },
            "tags_all": {
              "Name": "teraform"
            }
          }
        }
      ]
    }
  ]
}